# Silan-GitHub-Yearbook

./: .dockerignore  Dockerfile  readme.md  requirements.txt
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: __init__.py  screenshots.py  stats.py  tokens.py  visits.py
backend/app/models/: user.py
backend/app/repositories/: __init__.py  base.py  stats.py  token.py  user.py  visit.py
backend/app/services/: filters.py  github.py  providers.py  yearbook.py
config/: settings.yaml
src/: analyzer.py  collector.py  main.py  report.py  utils.py  visualizer.py
web/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/: 404.html
web/src/: App.tsx
web/src/components/yearbook/: ActivitySection.tsx  EmbedCode.tsx  Footer.tsx  Header.tsx  RepoCard.tsx  RepoSection.tsx  Row.tsx  Section.tsx  StatCell.tsx  StatsGrid.tsx  TechStackSection.tsx
web/src/hooks/: useYearbookLogic.ts
web/src/pages/: LandingPage.tsx  YearbookPage.tsx
web/src/services/: api.ts  github.ts
