[project]
name = "backend"
version = "0.1.0"
description = "GitHub Yearbook Backend Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.124.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload"
